--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       // Load config or initialize if missing
       if (typeof CONFIG === 'undefined') {
         window.CONFIG = {
-            botInviteUrl: "https://discord.com/oauth2/authorize?client_id=1443567723404853408&permissions=8&integration_type=0&scope=bot+applications.commands",
-            supportServerUrl: "https://discord.com/invite/twNGK45BuH",
+            botInviteUrl: "https://discord.com/oauth2/authorize?client_id=1439211049856405536",
+            supportServerUrl: "https://discord.gg/aE8GfQgeUN",
             botName: "Kali Billi",
             botDescription: "Your Cute Discord Companion - Fun, moderation, and AI chat for your Discord server."
         };
@@ -50,12 +50,12 @@
     <style>
         :root {
             /* Palette */
-            --bg-color: #FFFDFB;
-            --primary-blue: #DDEEFB;
-            --primary-pink: #FFD6E0;
+            --bg-color: #000000;
+            --primary-blue: ##05F697;
+            --primary-pink: #FFFFFF;
             --accent-lavender: #F3E9FF;
-            --text-dark: #243044;
-            --text-light: #6B7C93;
+            --text-dark: #6b7C93;
+            --text-light: #243044;
             --white: #FFFFFF;
             /* Gradients */
             --gradient-btn: linear-gradient(135deg, #aaddff 0%, #ffcce0 100%);
